tests/kyverno-policies/ingress-require-tls/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ingress-require-tls
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: ingress-require-tls
    rule: require-tls
    resources:
      - cm-acme-http-solver-web
      - skip-oauth2
    kind: Ingress
    result: skip
  - policy: ingress-require-tls
    rule: require-tls
    resources:
      - test-pass
    kind: Ingress
    result: pass
  - policy: ingress-require-tls
    rule: require-tls
    resources:
      - test-fail
    kind: Ingress
    result: fail
